test_files/bad/unknown_keyword_2.ru
dif S "SDF" "DAS"

if A then B